# minigui-live-demo-server

./: .gitignore  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
producer/: Makefile.am  nalstreamer.c  unixsocketclient.c  unixsocketclient.h
sample/: index.html
src/: Makefile.am  gwsocket.c  pixelencoder.c  pixelencoder.h  unixsocket.c  unixsocket.h  wdserver.c  wdserver.h  websocket.c  websocket.h
web/: webdisplay.js
