bin_PROGRAMS = mgremoteserver

mgremoteserver_SOURCES = \
  base64.c     \
  base64.h     \
  gslist.c     \
  gslist.h     \
  gwsocket.c   \
  gwsocket.h   \
  log.c        \
  log.h        \
  sha1.c       \
  sha1.h       \
  xmalloc.c    \
  xmalloc.h    \
  websocket.c  \
  websocket.h  \
  unixsocket.c \
  unixsocket.h

mgremoteserver_LDADD = @DEP_LIBS@
