bin_PROGRAMS = wdserver

wdserver_SOURCES = \
  base64.c     \
  base64.h     \
  gslist.c     \
  gslist.h     \
  wdserver.c   \
  wdserver.h   \
  log.c        \
  log.h        \
  sha1.c       \
  sha1.h       \
  xmalloc.c    \
  xmalloc.h    \
  websocket.c  \
  websocket.h  \
  unixsocket.c \
  unixsocket.h \
  pixelencoder.c \
  pixelencoder.h

wdserver_LDADD = @DEP_LIBS@
